force-app/main/default/objects/noduplicates__Auto_Merge_Field__c/noduplicates__Auto_Merge_Field__c.object-meta.xml
<CustomObject>
    <label>Auto Merge Field</label>
    <nameField>
        <displayFormat>AMF-{000000}</displayFormat>
        <label>Auto Merge Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto Merge Field</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>