force-app/main/default/objects/noduplicates__Auto_Merge_Field__c/fields/noduplicates__Allow_Blank__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Allow_Blank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Blank</label>
    <type>Checkbox</type>
</CustomField>