force-app/main/default/objects/noduplicates__Auto_Merge_Field__c/fields/noduplicates__Cross_Field__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Cross_Field__c</fullName>
    <label>Cross Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>