force-app/main/default/objects/noduplicates__Auto_Merge_Field__c/fields/noduplicates__Field__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>