force-app/main/default/objects/noduplicates__Auto_Merge_Field__c/fields/noduplicates__Merge_Rule__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Merge_Rule__c</fullName>
    <label>Merge Rule</label>
    <referenceTo>noduplicates__Merge_Rule__c</referenceTo>
    <relationshipLabel>Auto Merge Field</relationshipLabel>
    <relationshipName>Auto_Merge_Field</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>