force-app/main/default/objects/noduplicates__Auto_Merge_Field__c/fields/noduplicates__Number__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Number__c</fullName>
    <label>Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>