force-app/main/default/objects/noduplicates__Auto_Merge_Field__c/fields/noduplicates__Strategy__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Strategy__c</fullName>
    <label>Strategy</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>